# hs-db

./: README.md  hs-db.cabal
app/: Main.hs
openspec/: project.md
openspec/changes/add-sql-server/: design.md  proposal.md  tasks.md
openspec/changes/add-sql-server/specs/sql-query/: spec.md
openspec/changes/add-sql-server/specs/sql-server/: spec.md
openspec/changes/archive/2026-03-02-add-table-engine-and-wal/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-02-add-table-engine-and-wal/specs/table-engine/: spec.md
openspec/changes/archive/2026-03-02-add-table-engine-and-wal/specs/wal/: spec.md
openspec/changes/fix-resource-leaks-and-bounds-checking/: design.md  proposal.md  tasks.md
openspec/changes/fix-resource-leaks-and-bounds-checking/specs/table-engine/: spec.md
openspec/changes/fix-resource-leaks-and-bounds-checking/specs/wal/: spec.md
openspec/changes/fix-shutdown-and-error-handling/: design.md  proposal.md  tasks.md
openspec/changes/fix-shutdown-and-error-handling/specs/table-engine/: spec.md
openspec/changes/fix-shutdown-and-error-handling/specs/wal/: spec.md
openspec/changes/harden-wal-and-lifecycle-safety/: design.md  proposal.md  tasks.md
openspec/changes/harden-wal-and-lifecycle-safety/specs/table-engine/: spec.md
openspec/changes/harden-wal-and-lifecycle-safety/specs/wal/: spec.md
openspec/specs/table-engine/: spec.md
openspec/specs/wal/: spec.md
src/: HsDb.hs
src/HsDb/: Checkpoint.hs  IO.hs  Integration.hs  Logging.hs  Server.hs  Table.hs  Transaction.hs  Types.hs
src/HsDb/SQL/: Execute.hs  Parser.hs  Types.hs
src/HsDb/Server/: Protocol.hs
src/HsDb/WAL/: Replay.hs  Serialize.hs  Types.hs  Writer.hs
test/: Main.hs
test/Test/HsDb/: Checkpoint.hs  Generators.hs  Integration.hs  Logging.hs  Server.hs  Table.hs  Transaction.hs
test/Test/HsDb/SQL/: Execute.hs  Parser.hs
test/Test/HsDb/WAL/: Replay.hs  Serialize.hs
