cabal-version:   3.14
name:            hs-db
version:         0.1.0.0
license:         NONE
author:          Samuel Schlesinger
maintainer:      sgschlesinger@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall -Wcompat -Wincomplete-uni-patterns -Wpartial-fields

library
    import:           warnings
    exposed-modules:
        HsDb
        HsDb.IO
        HsDb.Types
        HsDb.Table
        HsDb.WAL.Types
        HsDb.WAL.Serialize
        HsDb.WAL.Writer
        HsDb.WAL.Replay
        HsDb.Integration
        HsDb.SQL.Types
        HsDb.SQL.Parser
        HsDb.SQL.Execute
        HsDb.Server.Protocol
        HsDb.Server
        HsDb.Logging
        HsDb.Transaction
        HsDb.Checkpoint
    build-depends:
        base ^>=4.18.3.0,
        stm,
        containers,
        vector,
        binary,
        bytestring,
        text,
        time,
        digest,
        unix,
        directory,
        network,
        transformers
    hs-source-dirs:   src
    default-language: GHC2021

executable hs-db-server
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        hs-db,
        directory,
        filepath,
        unix
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts

test-suite hs-db-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Test.HsDb.Generators
        Test.HsDb.Table
        Test.HsDb.WAL.Serialize
        Test.HsDb.WAL.Replay
        Test.HsDb.Integration
        Test.HsDb.SQL.Parser
        Test.HsDb.SQL.Execute
        Test.HsDb.Checkpoint
        Test.HsDb.Server
        Test.HsDb.Logging
        Test.HsDb.Transaction
    build-depends:
        base ^>=4.18.3.0,
        hs-db,
        hedgehog,
        stm,
        containers,
        vector,
        bytestring,
        text,
        time,
        temporary,
        directory,
        filepath,
        transformers,
        network
    ghc-options:      -threaded -rtsopts
    hs-source-dirs:   test
    default-language: GHC2021
